[gd_scene load_steps=6 format=3 uid="uid://c6iq73fcgye0j"]

[ext_resource type="Script" path="res://Script/UI.gd" id="1_8drhk"]
[ext_resource type="Texture2D" uid="uid://cua6espi8xrct" path="res://Assets/Assets_Master/Picsart_23-07-26_14-44-05-117.png" id="2_irfoy"]
[ext_resource type="Texture2D" uid="uid://oqlmv7naegjh" path="res://Assets/Assets_Master/IMG_20230726_144427.png" id="2_n8bno"]
[ext_resource type="FontFile" uid="uid://dwp05lxu71y6b" path="res://Assets/Font/kirifont/KiriFont.ttf" id="3_e8n8y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxr5p"]
bg_color = Color(0.980392, 0.631373, 0.305882, 1)

[node name="UI" type="CanvasLayer"]
offset = Vector2(74, 100)
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 74, 100)
script = ExtResource("1_8drhk")

[node name="GameReady" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = -0.514
anchor_top = -0.391
anchor_right = 1.486
anchor_bottom = 1.609
offset_left = 1168.13
offset_top = 3.368
offset_right = 1168.13
offset_bottom = -420.632
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.36, 1)
alignment = 1

[node name="TextureRect" type="TextureRect" parent="GameReady"]
layout_mode = 2
texture = ExtResource("2_irfoy")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 400.0
offset_top = -180.0
offset_right = 400.0
offset_bottom = -87.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="PointsLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_e8n8y")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -442.0
offset_top = -718.0
offset_right = -42.0
offset_bottom = -174.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.5, 1.5)
size_flags_vertical = 4
alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_e8n8y")
theme_override_font_sizes/font_size = 60
text = "BEST:"

[node name="ScoreLabel" type="Label" parent="GameOverBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.972656, 0.976563, 0.972656, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_e8n8y")
theme_override_font_sizes/font_size = 60
text = "SCORE:"

[node name="TextureRect" type="TextureRect" parent="GameOverBox"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_n8bno")

[node name="Panel" type="Panel" parent="GameOverBox"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cxr5p")

[node name="Restart" type="Button" parent="GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -45.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath(".")
theme_override_colors/font_color = Color(0.972656, 0.976563, 0.976563, 1)
theme_override_colors/font_focus_color = Color(0.3125, 0.863281, 0.351563, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_e8n8y")
theme_override_font_sizes/font_size = 40
text = "RESTART"

[node name="Quit" type="Button" parent="GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 25.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.964844, 0.972656, 0.96875, 1)
theme_override_colors/font_focus_color = Color(0.320313, 0.867188, 0.355469, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_e8n8y")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[connection signal="pressed" from="GameOverBox/Panel/Restart" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GameOverBox/Panel/Quit" to="." method="_on_quit_pressed"]
